# snklog

./: README.md  install.sh  pyproject.toml
snklog/: main.py
