[tool.poetry]
name = "snklog"
version = "0.1.0"
description = "Command line tool to navigate Snakemake logs with ease."
authors = ["Vince Buffalo <vsbuffalo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
snklog = "snklog.main:main"
